<resources>
    <string name="app_name">TvOnvifFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Connect to Service</string>
    <string name="menu_settings2">Get IPCams</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE SPP</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="device_name_default">Device Name</string>
    <string name="receive_byte">Recv Bytes：</string>
    <string name="data_format_default">Ascii</string>
    <string name="data_format_hex">Hex</string>
    <string name="clean">clean</string>
    <string name="send_byte">Send Bytes：</string>
    <string name="send">send</string>
    <string name="scan_ble_device">Scan BLE Device</string>
    <string name="device_name">name</string>
    <string name="device_address">address</string>
    <string name="scanning">Scanning......</string>
    <string name="zero">0</string>
    <string name="speed">0 B/s</string>
    <string name="ble_need_location">Android6.0蓝牙需要开启</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="sendTimeInterval">10</string>
    <string name="sendByteCount">0</string>
    <string name="sendCount">0</string>
    <string name="error_while_reading_the_tag">读标签出错!</string>
    <string name="mailbox_enabled_eeprom_cannot_be_written">警告！ST25DV通道模式已开启，EEPROM不可写。如果想关闭通道模式，请参考通道管理。</string>
    <string name="url_www_st_com_st25">www.szluoding.com</string>
    <string name="navigation_drawer_open">打开导航条</string>
    <string name="menu_help">帮助</string>
    <string name="navigation_drawer_close">关闭导航条</string>
    <string name="preferred_applications">优先应用</string>
    <string name="enable_nfc">开启NFC</string>
    <string name="nfc_currently_disabled">当前NFC关闭</string>
    <string name="about">关于</string>
    <string name="nfc_not_available">手机NFC不可用</string>
    <string name="please_tap_a_nfc_tag">请触碰NFC标签</string>
    <string name="product_unknown">未知产品</string>
    <string name="unknown_tag">未知标签</string>
    <string name="st25dv_menus">ST25DV菜单</string>
    <string name="Mapping_Version">映射版本: 0x</string>
    <string name="app_version_v">ST25NFCTap版本：V</string>
    <string name="ok">确认</string>
    <string name="version_dialog_header">App版本描述</string>
    <string name="product_features">产品特点</string>
    <string name="app_description"> ST25 NFC App是专门处理ST25TA标签（CLOUD ST25TA02K-P），M24SR动态标签(M24SR Nucleo 板和M24SR开发套件)，M24LRxx系列双接口动态标签, ST25TV系列标签和ST25DV系列动态标签的安卓应用程序. \n
    用户可以用它存储或读取NDEF信息，如网址、短信、电子邮件、名片（包括图片）、位置和专属信息。 \n
    NDEF多信息也支持. \n
    同指定的开发套件和固件可以演示特定的功能如固件升级、图片传输等\n</string>
    <string name="area_number_to_name">区域</string>
    <string name="invalid_tag">非法标签</string>
    <string name="tag_info">标签信息</string>
    <string name="no_tag">未侦测到标签</string>
    <string name="model_description">型号描述</string>
    <string name="model_type">型号类型</string>
    <string name="manufacturer">制造商</string>
    <string name="UID">UID</string>
    <string name="Memory_size">存储器容量(字节)：</string>
    <string name="Tech_list">技术列表</string>
    <string name="cc_file">CC文件</string>
    <string name="InformationRetrievalOnGoing">获取信息中……请保持标签接近读卡器</string>
    <string name="CCFileNotAvailable">CC File 不可用</string>
    <string name="CCLEN">CC长度 (字节):</string>
    <string name="Magic_Number">Magic数：0x</string>
    <string name="write_access_status">写权限状态 = 0x</string>
    <string name="tlv_read_access">Tlv读权限</string>
    <string name="Read_access">读权限:</string>
    <string name="Write_access">写权限:</string>
    <string name="servicedesc">服务描述</string>
    <string name="aiddescription">帮助描述</string>
    <string name="pwd_byte_15">字节15</string>
    <string name="pwd_byte_0">字节0</string>
    <string name="pwd_byte_1">字节1</string>
    <string name="pwd_byte_2">字节2</string>
    <string name="pwd_byte_3">字节3</string>
    <string name="pwd_byte_4">字节4</string>
    <string name="pwd_byte_5">字节5</string>
    <string name="pwd_byte_6">字节6</string>
    <string name="pwd_byte_7">字节7</string>
    <string name="pwd_byte_8">字节8</string>
    <string name="pwd_byte_9">字节9</string>
    <string name="pwd_byte_10">字节10</string>
    <string name="pwd_byte_11">字节11</string>
    <string name="pwd_byte_12">字节12</string>
    <string name="pwd_byte_13">字节13</string>
    <string name="pwd_byte_14">字节14</string>
    <string name="cancel">取消</string>
    <string name="thirty_two_bits_pwd">（32位 16进制格式）</string>
    <string name="sixty_four_bits_pwd">（64位 16进制格式）</string>
    <string name="ninety_six_bits_pwd">（96位 16进制格式）</string>
    <string name="invalid_hexadecimal_value">無效的十六進制值!</string>
    <string name="one_hundred_twenty_height_bits_pwd">（128位 16进制格式）</string>
    <string name="feature_under_nda">保密协议，请联络意法半导体本地销售获取完整版本.</string>
    <string name="Command_failed">命令失败！</string>
    <string name="save_read_data">保存读取数据！</string>
    <string name="present_pwd_failed">显示密码失败!</string>
    <string name="tag_not_in_the_field">标签不在场区内</string>
    <string name="untraceable_mode_enabled">保密模式已开启</string>
    <string name="tag_killed">标签已自毁!</string>
    <string name="kill_password_updated">自毁密码已更新</string>
    <string name="ndef_file_number">NDEF文件数</string>
    <string name="ndef">NDEF</string>
    <string name="cloning_clone">复制</string>
    <string name="hexadecimal_dump">十六进制内容</string>
    <string name="cloning_not_possible_no_valid_message">不可复制：无符合NDEF信息设置！</string>
    <string name="cloning_not_possible_no_record_in_ndef">不可复制：NDEF信息设置无记录！</string>
    <string name="no_ndef_data_or_unknown_data">无NDEF数据或未知数据</string>
    <string name="confirmation_needed">Confirmation needed</string>
    <string name="clone_ndef_to_other_tags">你想复制NDEF到其他标签？</string>
    <string name="clone_ndef_content">复制NDEF内容</string>
    <string name="select_memory_area">选择存储器区域</string>
    <string name="units_read_memory">单位</string>
    <string name="start_label">开始的位置</string>
    <string name="number_of_items">读取的个数：</string>
    <string name="error_during_read_operation">读操作出错。 读%d字节</string>
    <string name="bad_start_address">错误起始位</string>
    <string name="bad_number_of_bytes">错误字节数</string>
    <string name="reading_x_bytes_starting_y_address">从地址 %1$d 开始读 %2$d 个字节</string>
    <string name="addr">地址</string>
    <string name="area_number">区域%1$d</string>
    <string name="wrong_tag_selected">错误标签被选择</string>
    <string name="cloning_message1">请触碰新标签写入NDEF信息。一旦触碰，NDEF信息即可写入</string>
    <string name="cloning_message2">完成写入标签，可以通过简单触碰继续写入下一个标签</string>
    <string name="cloning_message3">不同类型标签可以复制</string>
    <string name="ndef_cloning_message">请等待……\n 复制NDEF信息</string>
    <string name="no_more_tag_to_write">没有更多标签可写</string>
    <string name="ndef_cloning">NDEF复制</string>
    <string name="cloning_wrong_datapayload">不能通过数列获取NDEF信息</string>
    <string name="cloning_empty_message">不能复制空白NDEF</string>
    <string name="cloning_empty_content">不能复制空白内容</string>
    <string name="cloning_successful">Cloning successful</string>
    <string name="cloning_not_possible">标签写保护，不能复制！</string>
    <string name="cloning_failed">复制失败！</string>
    <string name="cloning_issue_on_current_ndef">当前NDEF信息复制问题！</string>
    <string name="text_record">文本记录</string>
    <string name="edit_text_record">编辑该空白文本记录</string>
    <string name="create_uri_record">创建uri NDEF记录</string>
    <string name="edit_uri_record">编辑uri NDEF记录</string>
    <string name="Sms_record">SMS记录</string>
    <string name="edit_sms_record">编辑该SMS记录</string>
    <string name="Email_record">E-mail记录</string>
    <string name="edit_email_record">编辑该E-mail记录</string>
    <string name="edit_contact_record">编辑该Vcard NDEF记录</string>
    <string name="Wifi_record">WiFi记录</string>
    <string name="create_wifi_record">创建WiFi NDEF记录</string>
    <string name="edit_wifi_record">编辑WiFi NDEF记录</string>
    <string name="edit_bluetooth_record">编辑蓝牙记录</string>
    <string name="Contact_record">联系人</string>
    <string name="Uri_record">uri记录</string>
    <string name="Bluetooth_record">蓝牙记录</string>
    <string name="BluetoothLe_record">BLE记录</string>
    <string name="Aar_record">Android App启动记录</string>
    <string name="edit_aar_record">编辑该Android启动记录</string>
    <string name="mime_record">MIME记录</string>
    <string name="edit_mime_record">编辑该MIME NDEF记录</string>
    <string name="external_record">EXTERNAL 记录</string>
    <string name="edit_external_record">编辑该EXTERNAL NDEF记录</string>
    <string name="empty_record">空记录</string>
    <string name="unknown_record">未知记录</string>
    <string name="edit_empty_record">查看该空白记录</string>
    <string name="error_x_while_reading_content_of_y">读内容%2$s 出错[ %1$s ] </string>
    <string name="lock_blocks">锁定区块</string>
    <string name="unlocked">解锁</string>
    <string name="ndef_message_containing">:包含NDEF信息</string>
    <string name="ndef_records">记录.</string>
    <string name="ndef_size_in_bytes">NDEF大小：%1$d 字节.</string>
    <string name="area_protected_in_read_click_here_to_unlock">区域读保护，点击解锁</string>
    <string name="area_should_be_unlocked_first">区域首次解锁</string>
    <string name="select_ndef_record_to_add">选择NDEF记录</string>
    <string name="ndef_editor_delete_record">删除记录</string>
    <string name="ndef_editor_edit_tag">编辑标签</string>
    <string name="ndef_editor_write_tag">写标签</string>
    <string name="Write_ndef_text">写文本NDEF</string>
    <string name="st_uri">st.com</string>
    <string name="uri_id_code_title">uri ID代码</string>
    <string name="Tel">Tel</string>
    <string name="Write_ndef_sms">写SMS NDEF</string>
    <string name="Message">信息</string>
    <string name="Write_ndef_email">写email NDEF</string>
    <string name="subject">主题</string>
    <string name="Get_Contact">获取联系方式</string>
    <string name="Someone">有人</string>
    <string name="vcard_name">姓名</string>
    <string name="vcard_number">电话号码</string>
    <string name="vcard_email">Email</string>
    <string name="vcard_website">网址</string>
    <string name="memory_read_default_address_value">0</string>
    <string name="vcard_export_photo">导出相片:</string>
    <string name="Address">地址</string>
    <string name="vcard_capture">抓取[*]</string>
    <string name="PhotoQuality">照片质量</string>
    <string name="vcard_low_qa_0">低像素</string>
    <string name="vcard_high_qa_100">高像素</string>
    <string name="location_permission_not_granted">定位信息未授权！\n扫描WiFi接入点获取该信息</string>
    <string name="wifi_is_not_enabled">WiFi未打开</string>
    <string name="wifi_scan_starting">Wifi扫描开始</string>
    <string name="ssid_list_updated">SSID列表更新</string>
    <string name="bt_device_name">设备名称:</string>
    <string name="invalid_mac_addr">非法MAC地址 </string>
    <string name="vcard_info_text1">* : 照片能力抓取特点</string>
    <string name="vcard_info_text2">照片大小预设值80</string>
    <string name="vcard_info_text3">根据标签大小调整写入的Vcard内照片大小</string>
    <string name="vcard_info_text4"></string>
    <string name="vcard_info_text5"></string>
    <string name="Get_Installed_App">点击安装应用</string>
    <string name="photo_in_bytes">照片(字节)[%1$d]: %2$d</string>
    <string name="discrete_value">离散 = %1$d</string>
    <string name="device_doesnt_support_crop_feature">该设备不支持修剪功能！</string>
    <string name="wifi_network_ssid">网络SSID:</string>
</resources>